--- a/index.html
+++ b/index.html
@@ -187,21 +187,123 @@
                 </div>
             </div>
         </section>
-
         <section class="clients clearfix">
             <div class="clients-head">
                 <h2>Piú di 500.000 team <br> utilizzano Dropbox Business</h2>
                 <a href="https://www.dropbox.com/it/business">Scopri di piú sui nostri clienti</a>
             </div>
             <div class="clients-body">
-                
+                <div class="client-left fl">
+                    <div class="brand1 fl">
+                        <img src="css/designit1.svg" alt="">
+                    </div>
+                    <div class="brand2 fl">
+                        <img src="css/arizona_state_university2.svg" alt="">
+                    </div>
+                    <div class="brand3 fl">
+                        <img src="css/arizona_state_university2.svg" alt="">
+                    </div>
+                    <div class="brand4 fl">
+                        <img src="css/topps4.svg" alt="">
+                    </div>
+                </div>
+                <div class="client-mid fl">
+                    <img id="mid-client-img" src="css/clear_channel8.svg" alt="">
+                    <br>
+                    <br>
+                    <hr>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eaque quod <br> mollitia facere ducimus ex assumenda animi, neque tempore consequatur quasi <br> doloremque voluptatibus quibusdam temporibus libero! Ipsum expedita unde corporis.</p>
+                    <br>
+                    <p>Nichole Boatsman, Direttore IT</p>
+                </div>
+                <div class="client-right fl">
+                    <div class="brand5 fl">
+                        <img src="css/world_bicycle_relief5.svg" alt="">
+                    </div>
+                    <div class="brand6 fl">
+                        <img src="css/hearst_corp6.svg" alt="">
+                    </div>
+                    <div class="brand7 fl">
+                        <img src="css/lonely_planet7.svg" alt="">
+                    </div>
+                    <div class="brand8 fl">
+                        <img src="css/clear_channel8.svg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
+        <div class="trial">
+            <h1>Porta Dropbox Business nella tua azienda.</h1>
+            <button>Inizia la tua prova gratuita</button>
+        </div>
         <section class="faq">
-
+            <div class="faq-container">
+                <h2>Domande frequenti</h2>
+                <hr>
+                <ul>
+                    <li>Qual é la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</li><div class="arrow">&dtrif;</div>
+                    <hr>
+                    <li>Quanto spazio riceve il mio team?</li><div class="arrow">&dtrif;</div>
+                    <hr>
+                    <li>Posso eseguire l'upgrade del mio account Basic o Plus esistente? Come funziona la migrazione?</li><div class="arrow">&dtrif;</div>
+                    <hr>
+                    <li>Sono previsti sonti per Dropbox Business e Dropbox Enterprise?</li><div class="arrow">&dtrif;</div>
+                    <hr>
+                </ul>
+            </div>
         </section>
         <footer>
-
+            <div class="footer-container clearfix">
+                <div class="footer-sub fl">
+                    <h3>Dropbox</h3>
+                    <br>
+                    <p>Applicazione desktop</p>
+                    <p>App mobili</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
+                <div class="footer-sub fl">
+                    <h3>Azienda</h3>
+                    <br>
+                    <p>Informazioni su Dropbox</p>
+                    <p>Lavora con noi</p>
+                    <p>Dicono di noi</p>
+                    <p>Relazioni con gli investitori</p>
+                    <p>Blog</p>
+                </div>
+                <div class="footer-sub fl">
+                    <h3>Supporto</h3>
+                    <br>
+                    <p>Centro assistenza</p>
+                    <p>Contattaci</p>
+                    <p>Cookie</p>
+                    <p>Privacy e Termini</p>
+                    <p>Mappa del sito</p>
+                </div>
+                <div class="footer-sub fl">
+                    <h3>Community</h3>
+                    <br>
+                    <p>Sviluppatori</p>
+                    <p>Referral</p>
+                    <p>Forum</p>
+                </div>
+                <div class="footer-sub fl">
+                    <h3>Prodotti</h3>
+                    <br>
+                    <p>Plus</p>
+                    <p>Family</p>
+                    <p>Professional</p>
+                    <p>Dropbox Business</p>
+                    <p>Dropbox Enterprise</p>
+                </div>
+                <div id="footer-lang">
+                    <hr>
+                    <p>🌎 Italiano &utrif;</p>
+                </div>
+                
+            </div>
         </footer>
     </body>
 </html>
